@@ -114,7 +114,7 @@ static struct Bool_Opt
 	{"guicolor", &iflags.wc2_guicolor, TRUE, SET_IN_GAME},
 	{"help", &flags.help, TRUE, SET_IN_GAME},
 	{"hilite_pet",    &iflags.wc_hilite_pet, TRUE, SET_IN_GAME},	/*WC*/
-	{"hint", &iflags.hint, TRUE, SET_IN_FILE},
+	{"hint", &flags.hint, TRUE, SET_IN_FILE},
 	{"hitpointbar", &flags.hitpointbar, TRUE, SET_IN_GAME},
 	{"hp_notify", &iflags.hp_notify, FALSE, SET_IN_GAME},
 #ifdef ASCIIGRAPH
